--- a/crates/silicube/Cargo.toml
+++ b/crates/silicube/Cargo.toml
@@ -3,6 +3,8 @@ name = "silicube"
 description = "A library for sandboxed code execution"
 edition.workspace = true
 version.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 default = []
